crates/test-ui/ui/declare_class_invalid_type2.stderr
error[E0271]: type mismatch resolving `<Id<NSObject> as MaybeUnwrap>::Input == Id<CustomObject>`
 --> ui/declare_class_invalid_type2.rs
  |
  |         fn test_init_not_same_generics(this: Allocated<Self>) -> Id<NSObject> {
  |                                              ^^^^^^^^^^^^^^^ expected `Id<CustomObject>`, found `Id<NSObject>`
  |
  = note: expected struct `Id<CustomObject>`
             found struct `Id<NSObject>`
  = note: required for `RetainSemantics<3>` to implement `MessageRecieveId<Allocated<CustomObject>, Id<NSObject>>`

error[E0277]: the trait bound `i32: MaybeOptionId` is not satisfied
 --> ui/declare_class_invalid_type2.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `MaybeOptionId` is not implemented for `i32`
  |
  = help: the following other types implement trait `MaybeOptionId`:
            Id<T>
            Option<Id<T>>
  = note: required for `RetainSemantics<5>` to implement `MessageRecieveId<&CustomObject, i32>`
  = note: this error originates in the macro `$crate::__rewrite_self_param_inner` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)
